--- a/setup.cfg
+++ b/setup.cfg
@@ -1,30 +1,30 @@
 [zest.releaser]
-python-file-with-version = src/METE0R_PACKAGE/__init__.py
+python-file-with-version = src/proguard_mapping_parser/__init__.py
 
 
 [compile_catalog]
-domain = METE0R-PROJECT
-directory = src/METE0R_PACKAGE/locale
+domain = proguard-mapping-parser
+directory = src/proguard_mapping_parser/locale
 
 
 [extract_messages]
 input-paths = src
-output-file = src/METE0R_PACKAGE/locale/METE0R-PROJECT.pot
+output-file = src/proguard_mapping_parser/locale/proguard-mapping-parser.pot
 sort-by-file = True
 copyright-holder = mete0r@sarangbang.or.kr
 msgid-bugs-address = mete0r@sarangbang.or.kr
 
 
 [init_catalog]
-domain = METE0R-PROJECT
-input-file = src/METE0R_PACKAGE/locale/METE0R-PROJECT.pot
-output-dir = src/METE0R_PACKAGE/locale
+domain = proguard-mapping-parser
+input-file = src/proguard_mapping_parser/locale/proguard-mapping-parser.pot
+output-dir = src/proguard_mapping_parser/locale
 
 
 [update_catalog]
-domain = METE0R-PROJECT
-input-file = src/METE0R_PACKAGE/locale/METE0R-PROJECT.pot
-output-dir = src/METE0R_PACKAGE/locale
+domain = proguard-mapping-parser
+input-file = src/proguard_mapping_parser/locale/proguard-mapping-parser.pot
+output-dir = src/proguard_mapping_parser/locale
 
 
 [pip_compile]
